# osteoporosis_prediction_full_stack

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dev/data/: README.md  diagnosis_reference.csv  dirty_healthcare_dataset.csv  procedure_reference.csv
dev/models/: LogisticRegression.joblib
dev/models/pipeline_func/: pipeline_functions.joblib
