[project]
name = "osteoporosis-prediction-full-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "fastapi>=0.119.0",
    "googledrivedownloader>=1.1.0",
    "huggingface-hub>=0.35.3",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "ipython>=9.6.0",
    "kaleido>=1.1.0",
    "lightgbm>=4.6.0",
    "pip>=25.2",
    "plotly>=6.3.1",
    "prince>=0.16.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.37.0",
    "webp>=0.4.0",
    "xgboost>=3.0.5",
]
