[project]
name = "osteoporosis-prediction-full-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "catboost>=1.2.8",
    "dython>=0.7.11",
    "fastapi>=0.119.0",
    "googledrivedownloader>=1.1.0",
    "huggingface-hub>=0.35.3",
    "imbalanced-learn>=0.14.0",
    "ipython>=9.6.0",
    "kaleido>=1.1.0",
    "lightgbm>=4.6.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pip>=25.2",
    "plotly>=6.3.1",
    "prince>=0.16.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.37.0",
    "webp>=0.4.0",
    "xgboost>=3.0.5",
]
